Got delete and Put working and body showing. YAY
