# routes/student.js
@@ -2,10 +2,10 @@ const routes = require('express').Router();
 const studentController = require('../controllers/student');
 // const app = express();
 
-routes.get('/students', studentController.getAllStudents);
-routes.get('/student/:id', studentController.getStudentById);
+routes.get('/all', studentController.getAllStudents);
+routes.get('/:id', studentController.getStudentById);
 
-routes.post('/student', 
+routes.post('/', 
 // #swagger.summary = 'Add a student to the db'        
 // #swagger.description = 'add a student to the db'        
 /* #swagger.responses[201] = {description: 'OK'}}}*/
@@ -13,9 +13,9 @@ routes.post('/student',
  {in:'body',description: 'Add a Student', schema: { $ref:'#/definitions/student'}} */
 studentController.createStudent);
 
-routes.put('/student/:id', studentController.updateStudent);
+routes.put('/:id', studentController.updateStudent);
 
-routes.delete('/student/:id', 
+routes.delete('/:id', 
 // DELETE
  // #swagger.summary = 'Deletes a student from the db based on ID.'
 // #swagger.description = 'Deletes a student from the db based on ID.'
